# ZKntSDK

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json-sample_linux  CMakeUserPresets.json-sample_win  README.md  flake.nix  vcpkg.json
Mods/CertPinBypass/: CMakeLists.txt
Mods/CertPinBypass/Src/: CertPinBypass.cpp  CertPinBypass.hpp
Mods/Cheats/: CMakeLists.txt
Mods/Cheats/Src/: Cheats.cpp  Cheats.hpp
Mods/FreeCam/: CMakeLists.txt  README.md
Mods/FreeCam/Src/: FreeCam.cpp  FreeCam.hpp
Mods/NoPause/Src/: NoPause.cpp
Mods/Noclip/: CMakeLists.txt
Mods/Noclip/Src/: Noclip.cpp  Noclip.hpp
ZKntSdk/: CMakeLists.txt
ZKntSdk/Include/: EngineFunction.hpp  Functions.hpp  Globals.hpp  Hooks.hpp  IImGuiRenderer.hpp  IModSDK.hpp  IPluginInterface.hpp  IRenderer.hpp
ZKntSdk/Include/Glacier/: CompileReflection.hpp  EUpdateMode.hpp  Gameplay.hpp  Hash.hpp  IComponentInterface.hpp  Reflection.hpp  SGameUpdateEvent.hpp  TAlignedType.hpp  TArray.hpp  THashMap.hpp  THashSet.hpp  TIterator.hpp  TNonReallocatingArray.hpp  TPair.hpp  ZApplication.hpp  ZBoundedEntity.hpp  ZCamera.hpp  ZCharacter.hpp  ZComponent.hpp  ZConfigCommand.h  ZCurve.hpp  ZDelegate.hpp  ZEntity.hpp  ZFirearm.hpp  ZGadget.hpp  ZGameLoopManager.hpp  ZGameTime.hpp  ZHumanoid.hpp  ZInput.h  ZItem.hpp  ZLoadout.hpp  ZLocalization.hpp  ZMath.hpp  ZMemory.hpp  ZModule.hpp  ZObject.hpp  ZObjectPool.hpp  ZPlayer.hpp  ZPrimitives.hpp  ZRender.hpp  (+9 more)
ZKntSdk/Include/Util/: ImGuiUtils.hpp
ZKntSdk/Src/: EngineFunctionImpl.hpp  Functions.cpp  Globals.cpp  GlobalsImpl.hpp  HookImpl.hpp  Hooks.cpp  ModSDK.cpp  ModSDK.hpp  ResourceLoading.cpp
ZKntSdk/Src/Glacier/: ZResource.cpp
ZKntSdk/Src/Rendering/: DirectXTKRenderer.cpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
ZKntSdk/Src/Rendering/Fonts/: MaterialIconsRegular.gen.cpp  RobotoBlack.gen.cpp  RobotoBold.gen.cpp  RobotoBoldSpritefont.cpp  RobotoLight.gen.cpp  RobotoMedium.gen.cpp  RobotoRegular.gen.cpp  RobotoRegularSpritefont.cpp
ZKntSdk/Src/UI/: MainMenu.cpp  ModSelector.cpp
cmake/scripts/: sync-vcpkg-overlays.sh
cmake/toolchains/: clang-cl.cmake
